# Embedded-RingBuffer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: pipeline-ci.yml
include/: ring_buffer.hpp
tests/: test_main.cpp
